<resources>
    <string name="app_name">Blind Communicator</string>
    <string name="title_activity_main">Blind Communicator</string>
    <string name="menu_settings">Settings</string>
    <string name="mainWelcome">Player ready. You can use arrow keys to navigate and center key to confirm.</string>
    <string name="mainMessages">Messages</string>
    <string name="mainMessagesNew">new messages</string>
    <string name="mainMessagesNoNew">Messages. No new messages.</string>
    <string name="mainMessagesOneNew">Messages. One new message.</string>
	<string name="mainMessagesNewFromContact">New message from&#160;</string>
	<string name="mainMessagesNewFromUnknown">New message from unknown number</string>
	<string name="mainMessagesNotAvailable">Messages. Not available in this device.</string>
    <string name="mainCalls">Calls</string>
    <string name="mainCallsMissed">missed calls</string>
    <string name="mainCallsNoMissed">Calls. No missed calls.</string>
    <string name="mainCallsOneMissed">Calls. One missed call.</string>
    <string name="mainCallsNotAvailable">Calls. Not available in this device.</string>
	<string name="mainCallsNotAvailableOS">The Android version of this device doesn\'t allow Blind Communicator to access the call log.</string>
    <string name="mainNotAvailable">This option is not available in this device.</string>
	<string name="mainContacts">Contacts</string>
    <string name="mainMusicPlayer">Music</string>
    <string name="mainBrowser">Internet</string>
    <string name="mainAlarms">Alarms</string>
    <string name="mainAlarmsNoAlarms">Alarms. No alarms for today.</string>
    <string name="mainAlarmsOneAlarm">Alarms. One alarm for today.</string>
    <string name="mainAlarmsForToday">&#160;alarms for today.</string>
	<string name="mainVoiceRecorder">Voice recorder</string>
	<string name="mainApplications">Applications</string>
    <string name="mainSettings">Settings</string>
    <string name="mainStatus">Device status</string>
	<string name="mainFmradio">FM Radio</string>
	<string name="mainCarrierIs">, the carrier is&#160;</string>
	<string name="mainProfileIsNormal">, the profile is normal&#160;</string>
	<string name="mainProfileIsSilent">, the profile is silent&#160;</string>
	<string name="mainProfileIsVibrate">, the profile is vibrate&#160;</string>
	<string name="mainNoSignal">, there is no phone signal&#160;</string>
	<string name="mainBatteryChargedAt">The battery is charged at&#160;</string>
    <string name="mainPercentAndTime">&#160;percent, the time is&#160;</string>
    <string name="mainHours">&#160;hours&#160;</string>
	<string name="mainMinutesAndDate">&#160;minutes and the date is&#160;</string>
	<string name="mainOf">&#160;of&#160;</string>
	<string name="mainCarrierNotAvailable">Unknown</string>
	<string name="mainWifiOnWithNetwork">and the wifi is on and connected to a wifi network named&#160;</string>
	<string name="mainWifiOnWithoutNetwork">and the wifi is on and not connected to any wifi network.</string>
	<string name="mainWifiOff">and the wifi is off.</string>
	<string name="mainMusicPlayerPleaseTryAgain">Please try again in a few moments when the music player has processed all your music files.</string>
	<string name="mainNoTTSInstalledTitle">Error</string>
	<string name="mainNoTTSInstalledMessage">TTS software not found. Please download Google TTS App (free App) in order to this App to work.</string>
	<string name="mainNoTTSInstalledButton">Ok, I will.</string>
	<string name="mainPressBack">Press Back again to close the App.</string>
    <string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
	<string name="march">March</string>
	<string name="april">April</string>
	<string name="may">May</string>
	<string name="june">June</string>
	<string name="july">July</string>
	<string name="august">August</string>
	<string name="september">September</string>
	<string name="october">October</string>
	<string name="november">November</string>
	<string name="december">December</string>
	<string name="volumeMaximum">Maximum volume</string>
	<string name="volumeHigher">Higher volume</string>
	<string name="volumeLower">Lower volume</string>
	<string name="deviceCharged">The device is now fully charged</string>
	<string name="deviceChargedStatus">, the device is fully charged,&#160;</string>
	<string name="deviceCharging">The device is now charging</string>
	<string name="deviceChargingStatus">, the device is charging,&#160;</string>
	<string name="deviceUnplugged">The device is now unplugged</string>
	<string name="screenOn">The screen is now on</string>
	<string name="screenOff">The screen is now off</string>
	<string name="screenPortrait">The screen orientation is now in portrait mode</string>
	<string name="screenLandscape">The screen orientation is now in landscape mode</string>
	<string name="wifiConnectedToNetwork">Connected to a wifi network named&#160;</string>
	<string name="wifiDisconnectedFromNetwork">Disconnected from the wifi network</string>
	<string name="layoutMainMessages">Messages</string>
	<string name="layoutMainCalls">Calls</string>
	<string name="layoutMainContacts">Contacts</string>
	<string name="layoutMainMusic">Music</string>
	<string name="layoutMainBrowser">Internet</string>
	<string name="layoutMainAlarms">Alarms</string>
	<string name="layoutMainSettings">Settings</string>
	<string name="layoutMainStatus">Status</string>
	<string name="layoutMainOnResume">Now you are at the main menu</string>
	<string name="layoutMainFMradio">FM Radio</string>
	<string name="layoutMainCamera">Camera</string>
	<string name="layoutAlarmsNotifierShutdown">Slide up or down to shutdown alarm</string>
	<string name="layoutAlarmsList">Alarm list</string>
	<string name="layoutAlarmsCreate">Create alarm</string>
	<string name="layoutAlarmsAlarmCreated">The alarm was created and now you are at the alarms menu</string>
	<string name="layoutAlarmsOnResume">Now you are at the alarms menu</string>
	<string name="layoutAlarmsCreateMessage">- input message -</string>
	<string name="layoutAlarmsCreateMessage2">Alarm message. Slide right to input.</string>
	<string name="layoutAlarmsCreateMessage3">Alarm message:\n</string>
	<string name="layoutAlarmsCreateMessage4">Alarm message.&#160;</string>
	<string name="layoutAlarmsCreateCreate">Create alarm</string>
	<string name="layoutAlarmsCreateDay">Day alarm:&#160;</string>
	<string name="layoutAlarmsCreateDay2">Day alarm.&#160;</string>
	<string name="layoutAlarmsCreateTimeHour">Alarm hours:&#160;</string>
	<string name="layoutAlarmsCreateTimeHour2">Alarm hours.&#160;</string>
	<string name="layoutAlarmsCreateTimeMinute">Alarm minutes:&#160;</string>
	<string name="layoutAlarmsCreateTimeMinute2">Alarm minutes.&#160;</string>
	<string name="layoutAlarmsCreateHours">&#160;hours</string>
	<string name="layoutAlarmsCreateMinutes">&#160;minutes</string>
	<string name="layoutAlarmsCreateErrorNoMessage">Error. You must input a message.</string>
	<string name="layoutAlarmsCreateErrorAlarmConflict">Error. Another alarm has been set for that day and time.</string>
	<string name="layoutAlarmsCreateOnResume">Now you are at the create alarm menu</string>
	<string name="layoutAlarmsListNoAlarms">There are no alarms</string>
	<string name="layoutAlarmsListList">Alarms</string>
	<string name="layoutAlarmsListAlarmAlarmsCount">&#160;alarms has been set</string>
	<string name="layoutAlarmsListAt">&#160;at&#160;</string>
	<string name="layoutAlarmsListForToday">&#160;for today. Slide right or left to hear each one.</string>
	<string name="layoutAlarmsListDelete">Delete selected alarm</string>
	<string name="layoutAlarmsListDeleted">The alarm was deleted and now you are at the alarms list menu</string>
	<string name="layoutAlarmsListDeleteSelectError">First you must select an alarm</string>
	<string name="layoutAlarmsListOnResume">Now you are at the alarm list menu</string>
	<string name="layoutAlarmsListOnResume2">All alarms were deleted successfully and now you are at the alarm list menu</string>
	<string name="layoutAlarmsDeleteSelected">Selected alarm for deletion.&#160;</string>
	<string name="layoutAlarmsDeleteDelete">Confirm delete</string>
	<string name="layoutAlarmsDeleteOnResume">Now you are at the delete alarm menu</string>
	<string name="layoutAlarmsDeleteAllDelete">Delete all alarms. Slide right to confirm.</string>
	<string name="layoutAlarmsDeleteAllDeleteDelete">Delete all alarms</string>
	<string name="layoutAlarmsDeleteAllOnResume">Now you are at the delete all alarms menu</string>
	<string name="layoutVoiceRecorderList">List voice records</string>
	<string name="layoutVoiceRecorderCreate">Create voice record</string>
	<string name="layoutVoiceRecorderOnResume">Now you are at the voice recorder menu</string>
	<string name="layoutVoiceRecorderOnResume2">The voice record has been saved and now you are at the voice recorder menu</string>
	<string name="layoutVoiceRecorderCreateCreate">Create voice record</string>
	<string name="layoutVoiceRecorderCreateCreate2">Create voice record. Slide right to start recording and slide again in the same direction to stop recording.</string>
	<string name="layoutVoiceRecorderCreateError">Error. Please check if you have a memory card in your device.</string>
	<string name="layoutVoiceRecorderCreateOnResume">Now you are at the create voice record menu</string>
	<string name="layoutVoiceRecorderListList">Voice records</string>
	<string name="layoutVoiceRecorderListList2">Voice records. Slide right or left to select each one.</string>
	<string name="layoutVoiceRecorderListPlay">Play voice record</string>
	<string name="layoutVoiceRecorderListPlay2">Play selected voice record. Slide right to play and slide left to stop.</string>
	<string name="layoutVoiceRecorderListDelete">Delete voice record</string>
	<string name="layoutVoiceRecorderListDelete2">Delete selected voice record</string>
	<string name="layoutVoiceRecorderListItem">Voice record&#160;</string>
	<string name="layoutVoiceRecorderListItemOf">&#160;of&#160;</string>
	<string name="layoutVoiceRecorderListNoVoiceRecords">There are no voice records</string>
	<string name="layoutVoiceRecorderListPleaseWait">Please try again in a few moments when all the voice records has been processed.</string>
	<string name="layoutVoiceRecorderListError">First you must select a voice record</string>
	<string name="layoutVoiceRecorderListOnResume">Now you are at the list voice records menu</string>
	<string name="layoutVoiceRecorderListOnResume2">The voice record was deleted and now you are at the list voice records menu</string>
	<string name="layoutVoiceRecorderDeleteDelete">Selected voice record for deletion. Voice record&#160;</string>
	<string name="layoutVoiceRecorderDeleteDelete2">. Slide right to play and slide left to stop.</string>
	<string name="layoutSettingsReadingSpeed">Reading speed:&#160;</string>
	<string name="layoutSettingsScreenTimeout">Screen timeout:\n</string>
	<string name="layoutSettingsAlarmTone">Alarm tone:\n</string>
	<string name="layoutSettingsNotifyTone">Notify tone:\n</string>
	<string name="layoutSettingsCallTone">Call tone:\n</string>
	<string name="layoutSettingsProfileNormal">Profile: Normal</string>
	<string name="layoutSettingsWifiOn">Wifi: On</string>
	<string name="layoutSettingsBluetoothOn">Bluetooth: On</string>
	<string name="layoutSettingsInputMode">Input Mode:&#160;</string>
	<string name="layoutSettingsSystemSettings">System settings</string>
	<string name="layoutSettingsPrivacyPolicy">Privacy policy</string>
	<string name="backToMainMenu">Go back to the main menu</string>
</resources>