<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/dashboard" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:background="#000000">

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
		<LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
			<TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/messages" android:text="@string/layoutMainMessages"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
             <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/calls" android:text="@string/layoutMainCalls"/>
         </LinearLayout>
         <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
         <!--
         <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
             <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:scaleType="fitCenter" android:src="@drawable/settingswifion" />
             <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/fmradio" android:text="@string/layoutMainFMradio"/>
         </LinearLayout>
         <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="2"/>
         -->
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/contacts" android:text="@string/layoutMainContacts"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/music" android:text="@string/layoutMainMusic"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/browser" android:text="@string/layoutMainBrowser"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/alarms" android:text="@string/layoutMainAlarms"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>

	<LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/voicerecorder" android:text="@string/mainVoiceRecorder"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/apps" android:text="@string/mainApplications"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="1"/>
		
    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/settings" android:text="@string/layoutMainSettings"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/status" android:text="@string/layoutMainStatus"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
    </LinearLayout>
    
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="0.5"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="3" android:layout_gravity="center">
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF" android:id="@+id/fmradio" android:text="@string/layoutMainFMradio"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
        <LinearLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="3" android:orientation="vertical" android:layout_gravity="center" android:gravity="center">
            <TextView android:textSize="30dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:textColor="#FFFFFF"  android:id="@+id/camera" android:text="@string/layoutMainCamera"/>
        </LinearLayout>
        <FrameLayout android:layout_width="0px" android:layout_height="fill_parent" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
